Add notifications service and add swagger docs
